# PreOCR

./: CMakeLists.txt  gui.cpp  gui.h  main.cpp  main_gui.cpp  pbm.cpp  pbm.h  ppm.cpp  ppm.h  preocr.cpp  preocr.h
